feat: Implement progressive streaming and credential management
- Added progressive streaming capabilities to the streaming store, allowing for immediate playback while downloading subsequent chunks in the background.
- Introduced new types for handling streaming results and track metadata.
- Enhanced the streaming state with properties for managing playback status and progressive stream state.
- Implemented methods for toggling play/pause, stopping streams, and seeking to specific positions within tracks.
- Integrated Supabase for managing Spotify credentials, including checking, setting, and clearing credentials.
- Created invite codes and user profiles tables in Supabase with appropriate policies and triggers for user management.
- Added new fields to user profiles for enhanced user tracking and engagement metrics.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,11 @@
   "rust-analyzer.linkedProjects": ["./src-tauri/Cargo.toml"],
   "files.associations": {
     "*.css": "tailwindcss"
+  },
+  "chat.tools.terminal.autoApprove": {
+    "/^cd \"c:\\\\Users\\\\Aarya Mungli\\\\HiFlac\\\\src-tauri\"; cargo check 2>&1$/": {
+      "approve": true,
+      "matchCommandLine": true
+    }
   }
 }
