--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.93.3",
+    "@tanstack/react-query": "^5.17.0",
+    "appwrite": "^21.5.0",
+    "clsx": "^2.1.0",
+    "colorthief": "^2.4.0",
+    "date-fns": "^3.3.1",
+    "fast-average-color": "^9.4.0",
+    "framer-motion": "^11.0.0",
+    "fuse.js": "^7.0.0",
+    "music-metadata-browser": "^2.5.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
-    "zustand": "^4.5.0",
-    "framer-motion": "^11.0.0",
-    "@tanstack/react-query": "^5.17.0",
-    "colorthief": "^2.4.0",
-    "fast-average-color": "^9.4.0",
-    "fuse.js": "^7.0.0",
-    "music-metadata-browser": "^2.5.10",
-    "date-fns": "^3.3.1",
-    "clsx": "^2.1.0"
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@tauri-apps/api": "^1.5.3",
