--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,7 +15,7 @@ tauri = { version = "1.5", features = [ "window-all", "dialog-all", "fs-all", "p
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
-symphonia = { version = "0.5", features = ["flac", "wav", "alac", "mp3", "aac", "ogg", "vorbis"] }
+symphonia = { version = "0.5", features = ["flac", "wav", "alac", "mp3", "aac", "ogg", "vorbis", "isomp4"] }
 cpal = "0.15"
 rusqlite = { version = "0.31", features = ["bundled"] }
 walkdir = "2.4"
@@ -31,6 +31,24 @@ image = "0.24"
 base64 = "0.22"
 thiserror = "1.0"
 once_cell = "1.19"
+lazy_static = "1.4"
 # Streaming dependencies
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 urlencoding = "2.1"
+regex = "1.10"
+dirs = "5.0"
+zip = "0.6"
+quick-xml = "0.36"
+# Audio resampling
+rubato = "0.15"
+
+[profile.dev]
+opt-level = 1  # Basic optimization for faster runtime (0=none, 1=basic, 2=more, 3=max)
+
+[profile.dev.package."*"]
+opt-level = 3  # Optimize dependencies fully (they don't change often)
+
+[profile.release]
+lto = "thin"     # Link-time optimization
+codegen-units = 1
+strip = true     # Strip symbols for smaller binary
